# rust-k8s-crd-watcher

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
