[package]
name = "rust-k8s-crd-watcher"
version = "0.1.0"
authors = ["Chakradhar Rao <chakradhar.jonagam@biqmind.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.12.0"
serde = "1.0"
serde_json = "1.0"
ureq = { version = "*", features = ["json"] }